# eulerPlayGround

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: gtest.cmake
lib/: CMakeLists.txt  main.cpp
lib/include/: design_by_contract.hpp  fibonacci.hpp  gcd.hpp  modulo.hpp  primes.hpp
lib/src/: gcd.cpp  modulo.cpp  primes.cpp
lib/test/: gcd.test.cpp  module.bench.cpp  modulo.test.cpp  primes.bench.cpp  primes.test.cpp
src/: CMakeLists.txt  number_splitting.cpp  number_splitting.h
src/1/: CMakeLists.txt  main.cpp  multiples_sum.cpp  multiples_sum.hpp  multiples_sum.test.cpp
src/136/: CMakeLists.txt  solution.cpp  solution.hpp  solution.test.cpp
src/2/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp  fibonacci.test.cpp  main.cpp
src/209/: CMakeLists.txt  main.cpp  truth_table.cpp  truth_table.hpp  truth_table.test.cpp
src/21/: CMakeLists.txt  palindrome_sum.test.cpp  palindrome_sums.cpp  palindrome_sums.hpp
src/22/: CMakeLists.txt  config.22.h.in  name.test.cpp  names.cpp  names.hpp
src/3/: CMakeLists.txt  prime_factorizer.cpp  prime_factorizer.h  prime_factorizer.test.cpp
src/328/: CMakeLists.txt  decision_tree.cpp  decision_tree.hpp  decision_tree.test.cpp  distance_finder.cpp  distance_finder.hpp  distance_finder.test.cpp  main.cpp  strategy.cpp  strategy.hpp  strategy.test.cpp
src/4/: CMakeLists.txt  palindrome.test.cpp  palindrome_product.cpp  palindrome_product.hpp
src/700/: CMakeLists.txt  euler_coin.cpp  euler_coin.hpp  euler_coin.test.cpp  main.cpp
src/719/: CMakeLists.txt  number_splitting.cpp  number_splitting.h  number_splitting_test.cpp  number_string.cpp  number_string.h  number_string_test.cpp
src/728/: CMakeLists.txt  circle.bench.cpp  circle.test.cpp  circle_of_coins.cpp  circle_of_coins.hpp  main.cpp
src/735/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  analyzer.test.cpp  exponential_explorer.cpp  exponential_explorer.hpp  exponential_explorer.test.cpp  main.cpp  notes.md  sieve.bench.cpp  sieve.cpp  sieve.hpp  sieve.test.cpp  solver.bench.cpp  solver.cpp  solver.hpp  solver.test.cpp
src/primes/: CMakeLists.txt  factorizing.hpp  generator.bench.cpp  generator.cpp  generator.h  generator.test.cpp  greates.cpp
test/: CMakeLists.txt  number_splitting_test.cpp
